--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,17 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.7",
     "@next/font": "13.1.6",
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "autoprefixer": "^10.4.13",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "ethers": "^5.7.2",
     "next": "13.1.6",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.2.4"
+    "react-icons": "^4.7.1",
+    "tailwindcss": "^3.2.4",
+    "wagmi": "^0.9.6"
   }
 }
