--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@next/font": "13.1.6",
     "@rainbow-me/rainbowkit": "^0.8.1",
     "@superfluid-finance/sdk-core": "^0.6.1",
+    "@urql/core": "^3.1.1",
     "autoprefixer": "^10.4.13",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
