--- a/contracts/package.json
+++ b/contracts/package.json
@@ -5,6 +5,8 @@
     "hardhat": "^2.12.6"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.1",
+    "@superfluid-finance/ethereum-contracts": "^1.5.0",
     "dotenv": "^16.0.3"
   }
 }
